overflow fix

--- a/src/app/components/producto/producto.component.css
+++ b/src/app/components/producto/producto.component.css
@@ -11,7 +11,7 @@
     width: 85%;
     transform: translateX(-50%);
     left: 50%;
-    overflow: hidden;
+    overflow: scroll;
     margin-bottom: 20px;
 }
 #product-display #product-holder{
